# ai-web3-school-cohort-0

./: .gitignore  INITIALIZATION-SUMMARY.md  README.md  learning-plan.md  profile.md
.claude/: settings.local.json
daily/: 2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-27.md  2026-05-28.md  checkin-draft-2026-05-18.md  checkin-draft-2026-05-19.md  checkin-draft-2026-05-20.md  checkin-draft-2026-05-21.md  checkin-draft-2026-05-27.md
experiments/: PRACTICE-GUIDE-DEEPSEEK.md  PRACTICE-GUIDE.md  prompt-engineering-practice.md
experiments/ai-agent-deepseek/: QUICKSTART.md  README.md  agent_interactive.py  agent_multi.py  agent_simple.py  tools.py
experiments/chain-aware-context/: README.md
experiments/context-practice/: EXPERIMENT-REPORT.md  QUICKSTART.md  mock_data.py  test_agent.py  wallet-approval-context-spec.md  wallet_approval_agent.py
experiments/dao-research-agent/: ARCHITECTURE.md  QUICKSTART.md  README.md  agent.py  prompts.py  test_agent.py  tools.py
experiments/frameworks-practice/: README.md
experiments/mcp-practice/: .gitignore  PERMISSION_UPGRADE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  run_server.py
experiments/mcp-practice/examples/: usage_demo.py
experiments/mcp-practice/src/: __init__.py  config.py  logger.py  server.py
experiments/mcp-practice/tests/: test_client.py
handbook-feedback/: README.md
notes/: frameworks-handbook-summary.md  mcp-handbook-summary.md  web3-basics-review.md
templates/: daily-note.md  task-note.md
tools/: README.md  daily_helper.py  wcb_agent.py
(+29 files in other folders)
